# toyProject

./: .gitignore  README.md  nohup.out  pyproject.toml  secret.json
config/: settings.py  urls.py
guestbook/: middlewares.py  models.py  urls.py  views.py
guestbook/migrations/: 0001_initial.py  0002_alter_guestbook_password.py
