[tool.poetry]
name = "guestbook"
version = "0.1.0"
description = ""
authors = ["jjjaehong <woghd3014@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"  # ← 이렇게 고쳐야 해
django = ">=5.2,<6.0"
django-cors-headers = ">=4.7.0,<5.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
